Flex-Bison/teac_parser.output
Terminals unused in grammar

    UNTIL
    LEFT_SQ_BRACKET
    RIGHT_SQ_BRACKET
    QUESTION_MARK
    DOT
    BIT_NOT_OP


State 28 conflicts: 4 reduce/reduce
State 42 conflicts: 2 shift/reduce
State 81 conflicts: 17 shift/reduce, 6 reduce/reduce
State 86 conflicts: 2 shift/reduce
State 87 conflicts: 2 shift/reduce
State 88 conflicts: 2 shift/reduce
State 94 conflicts: 1 reduce/reduce
State 103 conflicts: 1 shift/reduce, 6 reduce/reduce
State 129 conflicts: 19 shift/reduce, 6 reduce/reduce
State 141 conflicts: 1 reduce/reduce
State 161 conflicts: 17 shift/reduce, 6 reduce/reduce
State 172 conflicts: 17 shift/reduce, 6 reduce/reduce
State 173 conflicts: 1 shift/reduce
State 174 conflicts: 17 shift/reduce, 6 reduce/reduce
State 185 conflicts: 2 shift/reduce
State 195 conflicts: 17 shift/reduce, 6 reduce/reduce
State 209 conflicts: 17 shift/reduce, 6 reduce/reduce
State 210 conflicts: 17 shift/reduce, 6 reduce/reduce
State 211 conflicts: 17 shift/reduce, 6 reduce/reduce
State 217 conflicts: 17 shift/reduce, 6 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: program function
    2        | function
    3        | IDENT
    4        | declaration

    5 type: INTEGER
    6     | FLOAT
    7     | DOUBLE
    8     | VOID
    9     | BOOLEAN
   10     | CHAR

   11 beforedecl: CONST
   12           | %empty

   13 declaration: beforedecl type IDENT SEMICOLON
   14            | beforedecl type IDENT ASSIGN_OP expression SEMICOLON

   15 declarations: declaration
   16             | declarations declaration

   17 tail: statements
   18     | LEFT_CURLY_BRACKET statements RIGHT_CURLY_BRACKET

   19 tail_inloop: statements_inloop
   20            | LEFT_CURLY_BRACKET statements_inloop RIGHT_CURLY_BRACKET

   21 bool_expression: relExp
   22                | TRUE_TOKEN
   23                | FALSE_TOKEN

   24 assign: IDENT ASSIGN_OP expression

   25 expression: assign
   26           | IDENT INC_OP
   27           | IDENT DEC_OP
   28           | simpleExp
   29           | IDENT

   30 simpleExp: simpleExp OR_OP andExp
   31          | andExp

   32 andExp: andExp AND_OP
   33       | bitRelExp

   34 bitRelExp: bitRelExp BIT_OR_OP relExp
   35          | bitRelExp AND relExp
   36          | bitRelExp BIT_XOR_OP relExp
   37          | relExp

   38 op: EQ_OP
   39   | NE_OP
   40   | GT_OP
   41   | LT_OP
   42   | LE_OP
   43   | GE_OP
   44   | OR_OP
   45   | AND_OP

   46 relExp: relExp op bitshiftExp
   47       | bitshiftExp

   48 bitshiftExp: bitshiftExp BIT_LSHIFT_OP sumExp
   49            | bitshiftExp BIT_RSHIFT_OP sumExp
   50            | sumExp

   51 pls_min: ADD_OP
   52        | SUB_OP

   53 mul_div: MUL_OP
   54        | DIV_OP
   55        | MOD_OP

   56 sumExp: sumExp pls_min mulExp
   57       | mulExp

   58 mulExp: mulExp mul_div unaryExp
   59       | unaryExp

   60 unaryExp: INC_OP IDENT
   61         | DEC_OP IDENT
   62         | NOT_OP IDENT
   63         | IDENT
   64         | value
   65         | LEFT_PAREN expression RIGHT_PAREN

   66 value: CONST_INT
   67      | CONST_FLOAT
   68      | CONST_CHAR
   69      | STRING_LITERAL

   70 else_if: ELIF LEFT_PAREN bool_expression RIGHT_PAREN tail
   71        | else_if ELIF LEFT_PAREN bool_expression RIGHT_PAREN tail
   72        | %empty

   73 else_part: ELSE tail
   74          | %empty

   75 if_statement: IF LEFT_PAREN bool_expression RIGHT_PAREN tail else_if else_part

   76 while_statement: WHILE LEFT_PAREN bool_expression RIGHT_PAREN tail_inloop

   77 for_statement: FOR LEFT_PAREN assign SEMICOLON bool_expression SEMICOLON expression RIGHT_PAREN tail_inloop

   78 do_statement: DO tail_inloop WHILE LEFT_PAREN bool_expression RIGHT_PAREN SEMICOLON

   79 switch_statement: SWITCH LEFT_PAREN expression RIGHT_PAREN LEFT_CURLY_BRACKET cases RIGHT_CURLY_BRACKET

   80 cases: case
   81      | cases case
   82      | cases default

   83 default: DEFAULT COLON statements BREAK SEMICOLON

   84 case: CASE expression COLON statements BREAK SEMICOLON

   85 return_val: expression
   86           | %empty

   87 return_statement: RETURN return_val SEMICOLON

   88 break_statement: BREAK SEMICOLON

   89 continue_statement: CONTINUE SEMICOLON

   90 expression_statement: expression SEMICOLON

   91 statements: %empty
   92           | statement
   93           | statements statement

   94 statement: if_statement
   95          | while_statement
   96          | for_statement
   97          | do_statement
   98          | switch_statement
   99          | return_statement
  100          | expression_statement
  101          | declarations
  102          | enum_statement
  103          | func_call

  104 statement_inloop: statement
  105                 | break_statement
  106                 | continue_statement

  107 statements_inloop: statement_inloop
  108                  | statements_inloop statement_inloop

  109 function: FUNC IDENT LEFT_PAREN parameters RIGHT_PAREN type LEFT_CURLY_BRACKET statements return_statement RIGHT_CURLY_BRACKET

  110 parameters: parameter
  111           | parameters COMMA parameter
  112           | %empty

  113 parameter: type IDENT

  114 enum_statement: ENUM IDENT LEFT_CURLY_BRACKET enum_list RIGHT_CURLY_BRACKET

  115 enum_list: one_val
  116          | enum_list COMMA one_val

  117 one_val: IDENT
  118        | IDENT ASSIGN_OP value

  119 func_call: IDENT LEFT_PAREN arguments RIGHT_PAREN
  120          | IDENT ASSIGN_OP IDENT LEFT_PAREN arguments RIGHT_PAREN

  121 arguments: argument
  122          | arguments COMMA argument
  123          | %empty

  124 argument: expression


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    INTEGER <int_val> (258) 5
    FLOAT <int_val> (259) 6
    DOUBLE <int_val> (260) 7
    VOID <int_val> (261) 8
    BOOLEAN <int_val> (262) 9
    CHAR <int_val> (263) 10
    CONST <int_val> (264) 11
    IDENT <symbol_table_item> (265) 3 13 14 24 26 27 29 60 61 62 63 109 113 114 117 118 119 120
    CONST_INT <int_val> (266) 66
    CONST_FLOAT <double_val> (267) 67
    CONST_CHAR <char_val> (268) 68
    STRING_LITERAL <str_val> (269) 69
    IF <int_val> (270) 75
    ELSE <int_val> (271) 73
    ELIF <int_val> (272) 70 71
    WHILE <int_val> (273) 76 78
    FOR <int_val> (274) 77
    DO <int_val> (275) 78
    SWITCH <int_val> (276) 79
    CASE <int_val> (277) 84
    DEFAULT <int_val> (278) 83
    RETURN <int_val> (279) 87
    BREAK <int_val> (280) 83 84 88
    CONTINUE <int_val> (281) 89
    TRUE_TOKEN <int_val> (282) 22
    FALSE_TOKEN <int_val> (283) 23
    ENUM <int_val> (284) 114
    FUNC <int_val> (285) 109
    UNTIL <int_val> (286)
    LEFT_PAREN <int_val> (287) 65 70 71 75 76 77 78 79 109 119 120
    RIGHT_PAREN <int_val> (288) 65 70 71 75 76 77 78 79 109 119 120
    LEFT_CURLY_BRACKET <int_val> (289) 18 20 79 109 114
    RIGHT_CURLY_BRACKET <int_val> (290) 18 20 79 109 114
    LEFT_SQ_BRACKET <int_val> (291)
    RIGHT_SQ_BRACKET <int_val> (292)
    SEMICOLON <int_val> (293) 13 14 77 78 83 84 87 88 89 90
    COMMA <int_val> (294) 111 116 122
    COLON <int_val> (295) 83 84
    QUESTION_MARK <int_val> (296)
    DOT <int_val> (297)
    ADD_OP <int_val> (298) 51
    SUB_OP <int_val> (299) 52
    MUL_OP <int_val> (300) 53
    DIV_OP <int_val> (301) 54
    MOD_OP <int_val> (302) 55
    INC_OP <int_val> (303) 26 60
    DEC_OP <int_val> (304) 27 61
    OR_OP <int_val> (305) 30 44
    AND_OP <int_val> (306) 32 45
    NOT_OP <int_val> (307) 62
    BIT_OR_OP <int_val> (308) 34
    AND <int_val> (309) 35
    BIT_XOR_OP <int_val> (310) 36
    BIT_NOT_OP <int_val> (311)
    BIT_LSHIFT_OP <int_val> (312) 48
    BIT_RSHIFT_OP <int_val> (313) 49
    EQ_OP <int_val> (314) 38
    NE_OP <int_val> (315) 39
    GT_OP <int_val> (316) 40
    LT_OP <int_val> (317) 41
    GE_OP <int_val> (318) 43
    LE_OP <int_val> (319) 42
    ASSIGN_OP <int_val> (320) 14 24 118 120


Nonterminals, with rules where they appear

    $accept (66)
        on left: 0
    program (67)
        on left: 1 2 3 4
        on right: 0 1
    type (68)
        on left: 5 6 7 8 9 10
        on right: 13 14 109 113
    beforedecl (69)
        on left: 11 12
        on right: 13 14
    declaration (70)
        on left: 13 14
        on right: 4 15 16
    declarations (71)
        on left: 15 16
        on right: 16 101
    tail (72)
        on left: 17 18
        on right: 70 71 73 75
    tail_inloop (73)
        on left: 19 20
        on right: 76 77 78
    bool_expression (74)
        on left: 21 22 23
        on right: 70 71 75 76 77 78
    assign (75)
        on left: 24
        on right: 25 77
    expression (76)
        on left: 25 26 27 28 29
        on right: 14 24 65 77 79 84 85 90 124
    simpleExp (77)
        on left: 30 31
        on right: 28 30
    andExp (78)
        on left: 32 33
        on right: 30 31 32
    bitRelExp (79)
        on left: 34 35 36 37
        on right: 33 34 35 36
    op (80)
        on left: 38 39 40 41 42 43 44 45
        on right: 46
    relExp (81)
        on left: 46 47
        on right: 21 34 35 36 37 46
    bitshiftExp (82)
        on left: 48 49 50
        on right: 46 47 48 49
    pls_min (83)
        on left: 51 52
        on right: 56
    mul_div (84)
        on left: 53 54 55
        on right: 58
    sumExp (85)
        on left: 56 57
        on right: 48 49 50 56
    mulExp (86)
        on left: 58 59
        on right: 56 57 58
    unaryExp (87)
        on left: 60 61 62 63 64 65
        on right: 58 59
    value (88)
        on left: 66 67 68 69
        on right: 64 118
    else_if (89)
        on left: 70 71 72
        on right: 71 75
    else_part (90)
        on left: 73 74
        on right: 75
    if_statement (91)
        on left: 75
        on right: 94
    while_statement (92)
        on left: 76
        on right: 95
    for_statement (93)
        on left: 77
        on right: 96
    do_statement (94)
        on left: 78
        on right: 97
    switch_statement (95)
        on left: 79
        on right: 98
    cases (96)
        on left: 80 81 82
        on right: 79 81 82
    default (97)
        on left: 83
        on right: 82
    case (98)
        on left: 84
        on right: 80 81
    return_val (99)
        on left: 85 86
        on right: 87
    return_statement (100)
        on left: 87
        on right: 99 109
    break_statement (101)
        on left: 88
        on right: 105
    continue_statement (102)
        on left: 89
        on right: 106
    expression_statement (103)
        on left: 90
        on right: 100
    statements (104)
        on left: 91 92 93
        on right: 17 18 83 84 93 109
    statement (105)
        on left: 94 95 96 97 98 99 100 101 102 103
        on right: 92 93 104
    statement_inloop (106)
        on left: 104 105 106
        on right: 107 108
    statements_inloop (107)
        on left: 107 108
        on right: 19 20 108
    function (108)
        on left: 109
        on right: 1 2
    parameters (109)
        on left: 110 111 112
        on right: 109 111
    parameter (110)
        on left: 113
        on right: 110 111
    enum_statement (111)
        on left: 114
        on right: 102
    enum_list (112)
        on left: 115 116
        on right: 114 116
    one_val (113)
        on left: 117 118
        on right: 115 116
    func_call (114)
        on left: 119 120
        on right: 103
    arguments (115)
        on left: 121 122 123
        on right: 119 120 122
    argument (116)
        on left: 124
        on right: 121 122


State 0

    0 $accept: . program $end
    1 program: . program function
    2        | . function
    3        | . IDENT
    4        | . declaration
   11 beforedecl: . CONST
   12           | . %empty  [INTEGER, FLOAT, DOUBLE, VOID, BOOLEAN, CHAR]
   13 declaration: . beforedecl type IDENT SEMICOLON
   14            | . beforedecl type IDENT ASSIGN_OP expression SEMICOLON
  109 function: . FUNC IDENT LEFT_PAREN parameters RIGHT_PAREN type LEFT_CURLY_BRACKET statements return_statement RIGHT_CURLY_BRACKET

    CONST  shift, and go to state 1
    IDENT  shift, and go to state 2
    FUNC   shift, and go to state 3

    $default  reduce using rule 12 (beforedecl)

    program      go to state 4
    beforedecl   go to state 5
    declaration  go to state 6
    function     go to state 7


State 1

   11 beforedecl: CONST .

    $default  reduce using rule 11 (beforedecl)


State 2

    3 program: IDENT .

    $default  reduce using rule 3 (program)


State 3

  109 function: FUNC . IDENT LEFT_PAREN parameters RIGHT_PAREN type LEFT_CURLY_BRACKET statements return_statement RIGHT_CURLY_BRACKET

    IDENT  shift, and go to state 8


State 4

    0 $accept: program . $end
    1 program: program . function
  109 function: . FUNC IDENT LEFT_PAREN parameters RIGHT_PAREN type LEFT_CURLY_BRACKET statements return_statement RIGHT_CURLY_BRACKET

    $end  shift, and go to state 9
    FUNC  shift, and go to state 3

    function  go to state 10


State 5

    5 type: . INTEGER
    6     | . FLOAT
    7     | . DOUBLE
    8     | . VOID
    9     | . BOOLEAN
   10     | . CHAR
   13 declaration: beforedecl . type IDENT SEMICOLON
   14            | beforedecl . type IDENT ASSIGN_OP expression SEMICOLON

    INTEGER  shift, and go to state 11
    FLOAT    shift, and go to state 12
    DOUBLE   shift, and go to state 13
    VOID     shift, and go to state 14
    BOOLEAN  shift, and go to state 15
    CHAR     shift, and go to state 16

    type  go to state 17


State 6

    4 program: declaration .

    $default  reduce using rule 4 (program)


State 7

    2 program: function .

    $default  reduce using rule 2 (program)


State 8

  109 function: FUNC IDENT . LEFT_PAREN parameters RIGHT_PAREN type LEFT_CURLY_BRACKET statements return_statement RIGHT_CURLY_BRACKET

    LEFT_PAREN  shift, and go to state 18


State 9

    0 $accept: program $end .

    $default  accept


State 10

    1 program: program function .

    $default  reduce using rule 1 (program)


State 11

    5 type: INTEGER .

    $default  reduce using rule 5 (type)


State 12

    6 type: FLOAT .

    $default  reduce using rule 6 (type)


State 13

    7 type: DOUBLE .

    $default  reduce using rule 7 (type)


State 14

    8 type: VOID .

    $default  reduce using rule 8 (type)


State 15

    9 type: BOOLEAN .

    $default  reduce using rule 9 (type)


State 16

   10 type: CHAR .

    $default  reduce using rule 10 (type)


State 17

   13 declaration: beforedecl type . IDENT SEMICOLON
   14            | beforedecl type . IDENT ASSIGN_OP expression SEMICOLON

    IDENT  shift, and go to state 19


State 18

    5 type: . INTEGER
    6     | . FLOAT
    7     | . DOUBLE
    8     | . VOID
    9     | . BOOLEAN
   10     | . CHAR
  109 function: FUNC IDENT LEFT_PAREN . parameters RIGHT_PAREN type LEFT_CURLY_BRACKET statements return_statement RIGHT_CURLY_BRACKET
  110 parameters: . parameter
  111           | . parameters COMMA parameter
  112           | . %empty  [RIGHT_PAREN, COMMA]
  113 parameter: . type IDENT

    INTEGER  shift, and go to state 11
    FLOAT    shift, and go to state 12
    DOUBLE   shift, and go to state 13
    VOID     shift, and go to state 14
    BOOLEAN  shift, and go to state 15
    CHAR     shift, and go to state 16

    $default  reduce using rule 112 (parameters)

    type        go to state 20
    parameters  go to state 21
    parameter   go to state 22


State 19

   13 declaration: beforedecl type IDENT . SEMICOLON
   14            | beforedecl type IDENT . ASSIGN_OP expression SEMICOLON

    SEMICOLON  shift, and go to state 23
    ASSIGN_OP  shift, and go to state 24


State 20

  113 parameter: type . IDENT

    IDENT  shift, and go to state 25


State 21

  109 function: FUNC IDENT LEFT_PAREN parameters . RIGHT_PAREN type LEFT_CURLY_BRACKET statements return_statement RIGHT_CURLY_BRACKET
  111 parameters: parameters . COMMA parameter

    RIGHT_PAREN  shift, and go to state 26
    COMMA        shift, and go to state 27


State 22

  110 parameters: parameter .

    $default  reduce using rule 110 (parameters)


State 23

   13 declaration: beforedecl type IDENT SEMICOLON .

    $default  reduce using rule 13 (declaration)


State 24

   14 declaration: beforedecl type IDENT ASSIGN_OP . expression SEMICOLON
   24 assign: . IDENT ASSIGN_OP expression
   25 expression: . assign
   26           | . IDENT INC_OP
   27           | . IDENT DEC_OP
   28           | . simpleExp
   29           | . IDENT
   30 simpleExp: . simpleExp OR_OP andExp
   31          | . andExp
   32 andExp: . andExp AND_OP
   33       | . bitRelExp
   34 bitRelExp: . bitRelExp BIT_OR_OP relExp
   35          | . bitRelExp AND relExp
   36          | . bitRelExp BIT_XOR_OP relExp
   37          | . relExp
   46 relExp: . relExp op bitshiftExp
   47       | . bitshiftExp
   48 bitshiftExp: . bitshiftExp BIT_LSHIFT_OP sumExp
   49            | . bitshiftExp BIT_RSHIFT_OP sumExp
   50            | . sumExp
   56 sumExp: . sumExp pls_min mulExp
   57       | . mulExp
   58 mulExp: . mulExp mul_div unaryExp
   59       | . unaryExp
   60 unaryExp: . INC_OP IDENT
   61         | . DEC_OP IDENT
   62         | . NOT_OP IDENT
   63         | . IDENT
   64         | . value
   65         | . LEFT_PAREN expression RIGHT_PAREN
   66 value: . CONST_INT
   67      | . CONST_FLOAT
   68      | . CONST_CHAR
   69      | . STRING_LITERAL

    IDENT           shift, and go to state 28
    CONST_INT       shift, and go to state 29
    CONST_FLOAT     shift, and go to state 30
    CONST_CHAR      shift, and go to state 31
    STRING_LITERAL  shift, and go to state 32
    LEFT_PAREN      shift, and go to state 33
    INC_OP          shift, and go to state 34
    DEC_OP          shift, and go to state 35
    NOT_OP          shift, and go to state 36

    assign       go to state 37
    expression   go to state 38
    simpleExp    go to state 39
    andExp       go to state 40
    bitRelExp    go to state 41
    relExp       go to state 42
    bitshiftExp  go to state 43
    sumExp       go to state 44
    mulExp       go to state 45
    unaryExp     go to state 46
    value        go to state 47


State 25

  113 parameter: type IDENT .

    $default  reduce using rule 113 (parameter)


State 26

    5 type: . INTEGER
    6     | . FLOAT
    7     | . DOUBLE
    8     | . VOID
    9     | . BOOLEAN
   10     | . CHAR
  109 function: FUNC IDENT LEFT_PAREN parameters RIGHT_PAREN . type LEFT_CURLY_BRACKET statements return_statement RIGHT_CURLY_BRACKET

    INTEGER  shift, and go to state 11
    FLOAT    shift, and go to state 12
    DOUBLE   shift, and go to state 13
    VOID     shift, and go to state 14
    BOOLEAN  shift, and go to state 15
    CHAR     shift, and go to state 16

    type  go to state 48


State 27

    5 type: . INTEGER
    6     | . FLOAT
    7     | . DOUBLE
    8     | . VOID
    9     | . BOOLEAN
   10     | . CHAR
  111 parameters: parameters COMMA . parameter
  113 parameter: . type IDENT

    INTEGER  shift, and go to state 11
    FLOAT    shift, and go to state 12
    DOUBLE   shift, and go to state 13
    VOID     shift, and go to state 14
    BOOLEAN  shift, and go to state 15
    CHAR     shift, and go to state 16

    type       go to state 20
    parameter  go to state 49


State 28

   24 assign: IDENT . ASSIGN_OP expression
   26 expression: IDENT . INC_OP
   27           | IDENT . DEC_OP
   29           | IDENT .  [RIGHT_PAREN, SEMICOLON, COMMA, COLON]
   63 unaryExp: IDENT .  [RIGHT_PAREN, SEMICOLON, COMMA, COLON, ADD_OP, SUB_OP, MUL_OP, DIV_OP, MOD_OP, OR_OP, AND_OP, BIT_OR_OP, AND, BIT_XOR_OP, BIT_LSHIFT_OP, BIT_RSHIFT_OP, EQ_OP, NE_OP, GT_OP, LT_OP, GE_OP, LE_OP]

    INC_OP     shift, and go to state 50
    DEC_OP     shift, and go to state 51
    ASSIGN_OP  shift, and go to state 52

    RIGHT_PAREN  reduce using rule 29 (expression)
    RIGHT_PAREN  [reduce using rule 63 (unaryExp)]
    SEMICOLON    reduce using rule 29 (expression)
    SEMICOLON    [reduce using rule 63 (unaryExp)]
    COMMA        reduce using rule 29 (expression)
    COMMA        [reduce using rule 63 (unaryExp)]
    COLON        reduce using rule 29 (expression)
    COLON        [reduce using rule 63 (unaryExp)]
    $default     reduce using rule 63 (unaryExp)


State 29

   66 value: CONST_INT .

    $default  reduce using rule 66 (value)


State 30

   67 value: CONST_FLOAT .

    $default  reduce using rule 67 (value)


State 31

   68 value: CONST_CHAR .

    $default  reduce using rule 68 (value)


State 32

   69 value: STRING_LITERAL .

    $default  reduce using rule 69 (value)


State 33

   24 assign: . IDENT ASSIGN_OP expression
   25 expression: . assign
   26           | . IDENT INC_OP
   27           | . IDENT DEC_OP
   28           | . simpleExp
   29           | . IDENT
   30 simpleExp: . simpleExp OR_OP andExp
   31          | . andExp
   32 andExp: . andExp AND_OP
   33       | . bitRelExp
   34 bitRelExp: . bitRelExp BIT_OR_OP relExp
   35          | . bitRelExp AND relExp
   36          | . bitRelExp BIT_XOR_OP relExp
   37          | . relExp
   46 relExp: . relExp op bitshiftExp
   47       | . bitshiftExp
   48 bitshiftExp: . bitshiftExp BIT_LSHIFT_OP sumExp
   49            | . bitshiftExp BIT_RSHIFT_OP sumExp
   50            | . sumExp
   56 sumExp: . sumExp pls_min mulExp
   57       | . mulExp
   58 mulExp: . mulExp mul_div unaryExp
   59       | . unaryExp
   60 unaryExp: . INC_OP IDENT
   61         | . DEC_OP IDENT
   62         | . NOT_OP IDENT
   63         | . IDENT
   64         | . value
   65         | . LEFT_PAREN expression RIGHT_PAREN
   65         | LEFT_PAREN . expression RIGHT_PAREN
   66 value: . CONST_INT
   67      | . CONST_FLOAT
   68      | . CONST_CHAR
   69      | . STRING_LITERAL

    IDENT           shift, and go to state 28
    CONST_INT       shift, and go to state 29
    CONST_FLOAT     shift, and go to state 30
    CONST_CHAR      shift, and go to state 31
    STRING_LITERAL  shift, and go to state 32
    LEFT_PAREN      shift, and go to state 33
    INC_OP          shift, and go to state 34
    DEC_OP          shift, and go to state 35
    NOT_OP          shift, and go to state 36

    assign       go to state 37
    expression   go to state 53
    simpleExp    go to state 39
    andExp       go to state 40
    bitRelExp    go to state 41
    relExp       go to state 42
    bitshiftExp  go to state 43
    sumExp       go to state 44
    mulExp       go to state 45
    unaryExp     go to state 46
    value        go to state 47


State 34

   60 unaryExp: INC_OP . IDENT

    IDENT  shift, and go to state 54


State 35

   61 unaryExp: DEC_OP . IDENT

    IDENT  shift, and go to state 55


State 36

   62 unaryExp: NOT_OP . IDENT

    IDENT  shift, and go to state 56


State 37

   25 expression: assign .

    $default  reduce using rule 25 (expression)


State 38

   14 declaration: beforedecl type IDENT ASSIGN_OP expression . SEMICOLON

    SEMICOLON  shift, and go to state 57


State 39

   28 expression: simpleExp .  [RIGHT_PAREN, SEMICOLON, COMMA, COLON]
   30 simpleExp: simpleExp . OR_OP andExp

    OR_OP  shift, and go to state 58

    $default  reduce using rule 28 (expression)


State 40

   31 simpleExp: andExp .  [RIGHT_PAREN, SEMICOLON, COMMA, COLON, OR_OP]
   32 andExp: andExp . AND_OP

    AND_OP  shift, and go to state 59

    $default  reduce using rule 31 (simpleExp)


State 41

   33 andExp: bitRelExp .  [RIGHT_PAREN, SEMICOLON, COMMA, COLON, OR_OP, AND_OP]
   34 bitRelExp: bitRelExp . BIT_OR_OP relExp
   35          | bitRelExp . AND relExp
   36          | bitRelExp . BIT_XOR_OP relExp

    BIT_OR_OP   shift, and go to state 60
    AND         shift, and go to state 61
    BIT_XOR_OP  shift, and go to state 62

    $default  reduce using rule 33 (andExp)


State 42

   37 bitRelExp: relExp .  [RIGHT_PAREN, SEMICOLON, COMMA, COLON, OR_OP, AND_OP, BIT_OR_OP, AND, BIT_XOR_OP]
   38 op: . EQ_OP
   39   | . NE_OP
   40   | . GT_OP
   41   | . LT_OP
   42   | . LE_OP
   43   | . GE_OP
   44   | . OR_OP
   45   | . AND_OP
   46 relExp: relExp . op bitshiftExp

    OR_OP   shift, and go to state 63
    AND_OP  shift, and go to state 64
    EQ_OP   shift, and go to state 65
    NE_OP   shift, and go to state 66
    GT_OP   shift, and go to state 67
    LT_OP   shift, and go to state 68
    GE_OP   shift, and go to state 69
    LE_OP   shift, and go to state 70

    OR_OP     [reduce using rule 37 (bitRelExp)]
    AND_OP    [reduce using rule 37 (bitRelExp)]
    $default  reduce using rule 37 (bitRelExp)

    op  go to state 71


State 43

   47 relExp: bitshiftExp .  [RIGHT_PAREN, SEMICOLON, COMMA, COLON, OR_OP, AND_OP, BIT_OR_OP, AND, BIT_XOR_OP, EQ_OP, NE_OP, GT_OP, LT_OP, GE_OP, LE_OP]
   48 bitshiftExp: bitshiftExp . BIT_LSHIFT_OP sumExp
   49            | bitshiftExp . BIT_RSHIFT_OP sumExp

    BIT_LSHIFT_OP  shift, and go to state 72
    BIT_RSHIFT_OP  shift, and go to state 73

    $default  reduce using rule 47 (relExp)


State 44
